# skill-jepa-wm-pusht

./: .gitattributes  .gitignore  MANIFEST.in  README.md  THIRD-PARTY-LICENSES.md  pyproject.toml  requirements.txt  setup_macros.py
artifacts/phase_a_current_checkpoint/evals/: phase_a_external_debug.yaml  pusht_online_eval.json  pusht_online_records.csv
artifacts/pusht_debug/: EXPERIMENT_STATUS.md  skill_jepa_wm_report.tex
artifacts/pusht_debug/planner_online_joint/: pusht_online_eval.json
artifacts/pusht_debug/planner_online_low_level/: pusht_online_eval.json
artifacts/pusht_locked_suite/: skill_jepa_wm_locked_progress_report.tex
artifacts/pusht_locked_suite/evals/current_best_checkpoint_100ep/: pusht_online_eval.json  pusht_online_records.csv
artifacts/pusht_locked_suite/reports/: current_best_checkpoint_comparison.csv
artifacts/release/: skill_jepa_wm_reliability_report.md
artifacts/release/sanitized_locked_artifacts/: pusht_online_eval_sanitized.json  pusht_online_records_sanitized.csv
configs/ablations/: no_composition.yaml  no_effect_alignment.yaml  no_hierarchy.yaml
configs/exp/: pusht_debug.yaml  pusht_debug_k2.yaml
docs/architecture/: experiment_flow.mmd  model_pipeline.mmd
evals/simu_env_planning/: README.md  run_eval_grid.py
evals/simu_env_planning/base_configs/droid/: droid_L2_cem_sourcedset_H3_nas3_maxnorm01_ctxt2_gH3.yaml
evals/simu_env_planning/base_configs/mw/: reach-wall_L2_cem_sourcexp_H6_nas3_ctxt2.yaml
evals/simu_env_planning/base_configs/rcasa_custom/: place_L2_cem_sourcedset_H3_nas1_maxnorm005_scaleact_repeat5_fskip5_max60_ctxt2.yaml  reach-pick_L2_cem_sourcedset_H3_nas1_maxnorm005_scaleact_repeat5_fskip5_max60_ctxt2.yaml  reach_L2_cem_sourcedset_H3_nas1_maxnorm005_scaleact_repeat5_fskip5_max60_ctxt2.yaml
evals/simu_env_planning/envs/: droid_dset_dummy_env.py  init.py  metaworld.py  pointmaze_gym_wrap.py  pusht_gym_wrap.py  robocasa.py  wall_gym_wrap.py
evals/simu_env_planning/envs/pointmaze_env/: dynamic_mjc.py  maze_model.py  q_iteration.py  waypoint_controller.py
evals/simu_env_planning/envs/pointmaze_env/gridcraft/: __init__.py  grid_env.py  grid_spec.py  utils.py  wrappers.py
evals/simu_env_planning/envs/pusht_env/: pusht_env.py
evals/simu_env_planning/envs/wall_env/envs/: utils.py  wall.py
evals/simu_env_planning/envs/wrappers/: multitask.py  pixels.py  tensor.py  time_limit.py
evals/simu_env_planning/planning/: episode_plot_utils.py  gc_agent.py  plan_evaluator.py  utils.py
evals/simu_env_planning/planning/common/: __init__.py  gc_logger.py  parser.py
evals/simu_env_planning/planning/planning/: objectives.py  planner.py
skill_jepa/: __init__.py
src/datasets/utils/: dataloader.py  utils.py
src/datasets/utils/video/: functional.py  randaugment.py  randerase.py  transforms.py
src/scripts/: download_data.py
src/skill_jepa/: __init__.py  losses.py  utils.py
src/skill_jepa/analysis/: __init__.py  eval_pusht.py  eval_pusht_online.py  metrics.py
src/skill_jepa/data/: __init__.py  h5_pusht.py
src/skill_jepa/encoders/: __init__.py  vjepa2.py
src/skill_jepa/envs/: __init__.py
src/skill_jepa/modules/: __init__.py  action_chunk_encoder.py  low_level_wm.py  skill_idm.py  skill_prior.py  skill_wm.py  state_projector.py
src/skill_jepa/planning/: __init__.py  hierarchical_planner.py  high_level_cem.py  low_level_cem.py  random_high_level.py
src/skill_jepa/trainers/: __init__.py  common.py  objectives.py  train_joint.py  train_low_level.py  train_skill_passive.py
src/utils/: cluster.py  monitoring.py
tests/skill_jepa/: test_eval_reliability.py  test_feature_dataset.py  test_state_projector.py
tools/: __init__.py  cache_vjepa_features.py  refresh_release_artifacts.py  run_phase_a_current_checkpoint_eval.py  run_skill_jepa_pusht_locked_suite.py
