[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-jepa-wm-pusht"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Yicheng Zhao"}
]
keywords = ["machine learning", "world models", "jepa", "reinforcement learning"]

dependencies = [
    # Core ML framework
    "torch>=2.7.0",
    "torchvision==0.22.0",
    "torchrl>=0.9.2",
    "tensordict>=0.9.1",
    "timm>=1.0.19",
    # Data processing
    "numpy",
    "pandas",
    "h5py",
    "hdf5plugin",
    "einops",
    "datasets",  # HuggingFace datasets for loading parquet/arrow data
    # Image and video processing
    "opencv-python",
    "pillow",
    "decord>=0.6.0",
    "imageio",
    "imageio-ffmpeg",
    "moviepy",
    "mediapy",
    "lpips>=0.1.4",
    # see https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-cpu-only-torchcodec
    "torchcodec<=0.5",
    # Scientific computing
    "scipy",
    "scikit-image",
    # Visualization
    "matplotlib",
    "seaborn",
    "plotly",
    "termcolor",
    # Configuration and logging
    "hydra-core",
    "hydra-submitit-launcher",
    "omegaconf",
    "wandb",
    "transformers>=5.4.0",
    "huggingface_hub>=0.20.0",
    # Utilities
    "tqdm",
    "submitit",
    "clusterscope",
    "ruamel.yaml",
    "nevergrad",
    # Simulation environments
    "gym==0.23.1",
    "gymnasium>=1.2.0",
    "pygame>=2.6.0",
    "pymunk==6.8.0",
    "shapely",
    "pybullet",
    "mujoco>=3.2.0",
    "dm-control>=1.0.34",
    "metaworld",
    # PointMaze environment (requires both mujoco and mujoco-py)
    "d4rl",
    "cython<3.0", # Required for mujoco-py compatibility
    "patchelf", # Required for mujoco-py compilation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "black>=25.0.0",
    "isort>=7.0.0",
    "flake8>=7.0.0",
    "ipykernel",
    "jupyterlab",
    "huggingface_hub>=0.20.0",
]

[tool.uv.sources]
metaworld = { git = "https://github.com/Farama-Foundation/Metaworld.git", branch = "master" }
d4rl = { git = "git+https://github.com/Farama-Foundation/D4RL.git", branch = "master" }

# NOTE: robocasa and robosuite must be installed manually from source.
# See README.md "Optional: Robocasa" section for details.
# Repos: https://github.com/Basile-Terv/robosuite (robocasa-dev branch)
#        https://github.com/Basile-Terv/robocasa

[project.urls]
Homepage = "https://github.com/YichengDraw/skill-jepa-wm-pusht"
Repository = "https://github.com/YichengDraw/skill-jepa-wm-pusht"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["skill_jepa*", "evals*"]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
