[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-jepa-wm-pusht"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Yicheng Zhao"}
]
keywords = ["machine learning", "world models", "jepa", "reinforcement learning"]

dependencies = [
    "torch>=2.7.0",
    "numpy",
    "pandas",
    "h5py",
    "hdf5plugin",
    "PyYAML",
    "opencv-python",
    "imageio",
    "imageio-ffmpeg",
    "scikit-image",
    "matplotlib",
    "transformers>=5.4.0",
    "huggingface_hub>=0.20.0",
    "gymnasium>=1.2.0",
    "pygame>=2.6.0",
    "pymunk>=6.8.0",
    "shapely",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "black>=25.0.0",
    "isort>=7.0.0",
    "flake8>=7.0.0",
    "ipykernel",
    "jupyterlab",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/YichengDraw/skill-jepa-wm-pusht"
Repository = "https://github.com/YichengDraw/skill-jepa-wm-pusht"

[tool.setuptools.packages.find]
where = ["src"]
include = ["skill_jepa*"]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
