[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-jepa-wm-pusht"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    {name = "Yicheng Zhao"}
]
keywords = ["machine learning", "world models", "jepa", "reinforcement learning"]

dependencies = [
    "torch>=2.7.0,<2.12",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.1",
    "h5py>=3.10,<4.0",
    "hdf5plugin>=4.0,<7.0",
    "PyYAML>=6.0,<7.0",
    "opencv-python>=4.9,<5.0",
    "imageio>=2.30,<3.0",
    "imageio-ffmpeg>=0.4,<1.0",
    "scikit-image>=0.22,<0.27",
    "matplotlib>=3.8,<3.11",
    "transformers>=5.4.0,<6.0",
    "huggingface_hub>=0.20.0",
    "gymnasium>=1.2.0,<2.0",
    "pygame>=2.6.0,<3.0",
    "pymunk>=6.8.0,<8.0",
    "shapely>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "black>=25.0.0",
    "isort>=7.0.0",
    "flake8>=7.0.0",
    "ipykernel",
    "jupyterlab",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/YichengDraw/skill-jepa-wm-pusht"
Repository = "https://github.com/YichengDraw/skill-jepa-wm-pusht"

[tool.setuptools.packages.find]
where = ["src"]
include = ["skill_jepa*"]

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
